# image_downloader

./: CMakeLists.txt  README.md
src/: main.cpp  main.qml  main.qrc
src/downloader/: downloader.cpp  downloader.h
src/qml/: main.qml
src/qml/templates/: Button.qml  TextField.qml
